<resources>
    <string name="app_name">TestCovidApi</string>
    <string name="state">Country</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="deaths">Deaths</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="max">Max</string>

    <string name="testDate">April 23, 2020</string>
    <string name="testMetric">232019</string>
</resources>