<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvSelectState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/state"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinnerSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@id/tvSelectState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSelectState"
        app:layout_constraintTop_toTopOf="@id/tvSelectState"
        app:popupTextAlignment="start"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/radioGroupMetricSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectState" >

        <RadioButton
            android:id="@+id/radioButtonNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative" />

        <RadioButton
            android:id="@+id/radioButtonPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive" />

        <RadioButton
            android:id="@+id/radioButtonDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths" />
    </RadioGroup>

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:spark_lineColor="@color/brand_color_primary"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTimeSelection"
        app:layout_constraintTop_toBottomOf="@id/radioGroupMetricSelection" />

    <RadioGroup
        android:id="@+id/radioGroupTimeSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvMetricLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/radioButtonMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />

        <RadioButton
            android:id="@+id/radioButtonMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/testDate"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMetricLabel"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/testMetric"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDateLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>